--- a/application.yml
+++ b/application.yml
@@ -1,10 +1,16 @@
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/core_database
-    username: ${POSTGRES_USER}
-    password: ${POSTGRES_PASSWORD}
+    url: jdbc:postgresql://host.docker.internal:5432/core_database
+    username: postgres
+    password: admin
     driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
       ddl-auto: update
     show-sql: true
+
+logging:
+  level:
+    root: INFO
+    org.springframework: DEBUG
+    org.hibernate: DEBUG
