--- a/compose.yaml
+++ b/compose.yaml
@@ -6,15 +6,15 @@ services:
       - 'discovery.type=single-node'
       - 'xpack.security.enabled=false'
     ports:
-      - '9200'
-      - '9300'
+      - '9200:9200'
+      - '9300:9300'
 
   postgres:
     image: 'postgres:15'
     environment:
-      POSTGRES_DB: core_database
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: core_database  # Nome do banco de dados que você deseja
+      POSTGRES_USER: leonan       # Nome do usuário que você deseja
+      POSTGRES_PASSWORD: 123456   # Senha do usuário
     ports:
       - '5432:5432'
     volumes:
