feat: security configs have been implemented

--- a/application.yml
+++ b/application.yml
@@ -9,8 +9,5 @@ spring:
       ddl-auto: update
     show-sql: true
 
-logging:
-  level:
-    root: INFO
-    org.springframework: DEBUG
-    org.hibernate: DEBUG
+server:
+  port: 8080
