--- a/application.yml
+++ b/application.yml
@@ -6,7 +6,7 @@ spring:
     driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: drop-and-create
     show-sql: true
 
 server:
