--- a/exadel-core-service/application.yml
+++ b/exadel-core-service/application.yml
@@ -6,8 +6,13 @@ spring:
     driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
-      ddl-auto: drop-and-create
+      ddl-auto: update
     show-sql: true
+
+logging:
+  level:
+    org.springframework.security: DEBUG
+
 
 server:
   port: 8080
