feature: token authentication have been changed

--- a/exadel-authentication-service/application.yml
+++ b/exadel-authentication-service/application.yml
@@ -16,6 +16,11 @@ app:
         prefix: Bearer
         type: JWT
 
+logging:
+  level:
+    org.springframework.security: DEBUG
+
+
 spring:
   datasource:
     url: jdbc:postgresql://host.docker.internal:5448/auth_database
